--- a/main.html
+++ b/main.html
@@ -7,6 +7,40 @@
 </head>
 
 <body>
+	<form>
+	Name*
+ <input type="text" placeholder="name">
+	<br>
+	Email*
+<input type="text" placeholder="email">
+	<br>
+	Gender*
+	<label id="101">
+		<input type="radio" valve="male" name="gender">male
+	</label>
+	<label id="102">
+		<input type="radio" valve="female" name="gender">female
+	</label>
+	<br>
+	Laptop Brands
+	<select name="laptop" id="latop">
+		<option name="Apple">Apple</option>
+		<option name="Asus">Asus</option>
+		<option name="HP">HP</option>
+	</select>
+	<br>
+	Age*
+	 <input type="text" placeholder="age">
+	<br>
+	DOB*
+	 <input type="text" placeholder="DOB">
+	<br>
+	Password*
+	<input type="password" placeholder="password">
+	<br>
+ 		 
+		<input type="submit" value="submit">
+	</form>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
