--- a/main.html
+++ b/main.html
@@ -8,13 +8,14 @@
 
 <body>
 	<form>
-	Name*
+<label id="#name">
  <input type="text" placeholder="name">
+</label>
 	<br>
-	Email*
-<input type="text" placeholder="email">
+	<label id="#email">
+     <input type="text" placeholder="email">
+	</label>
 	<br>
-	Gender*
 	<label id="101">
 		<input type="radio" valve="male" name="gender">male
 	</label>
@@ -22,20 +23,22 @@
 		<input type="radio" valve="female" name="gender">female
 	</label>
 	<br>
-	Laptop Brands
-	<select name="laptop" id="latop">
+	
+	<select name="laptop" id="#latop">
 		<option name="Apple">Apple</option>
 		<option name="Asus">Asus</option>
 		<option name="HP">HP</option>
 	</select>
 	<br>
-	Age*
+	<label id="#age">
 	 <input type="text" placeholder="age">
+	</label>
 	<br>
-	DOB*
+	<label id="dob">
 	 <input type="text" placeholder="DOB">
+	</label>
 	<br>
-	Password*
+	
 	<input type="password" placeholder="password">
 	<br>
  		 
