--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
 </label>
 	<br>
 	<label id="#email">
-     <input type="text" placeholder="email">
+     <input type="email" placeholder="email">
 	</label>
 	<br>
 	<label id="101">
@@ -35,7 +35,7 @@
 	</label>
 	<br>
 	<label id="dob">
-	 <input type="text" placeholder="DOB">
+	 <input type="date" placeholder="DOB">
 	</label>
 	<br>
 	
