--- a/main.html
+++ b/main.html
@@ -8,41 +8,44 @@
 
 <body>
 	<form>
-<div>  
-<label>Name*</label>   
+    <div>  
+<label for="Name">Name*</label>   
 <input type="text" placeholder="Enter Name" name="name" required>   
 </div> 
 	<div>   
-<label> Email* </label>   
-<input type="email" placeholder="Enter email ID" name="email" required>   
+        <label for="Email"> Email* </label>   
+        <input type="email" placeholder="Enter email ID" name="email" required>   
   
-</div> 
-		<label>Gender*</label>
-	<label id="101">
+     </div> 
+	<div>
+		<label for="Gender">Gender*</label>
+	
 		<input type="radio" valve="male" name="gender" required>male
-	</label>
+	
 	<label id="102">
 		<input type="radio" valve="female" name="gender" required>female
-	</label>
-	<br>
 	
+		</div>
+	<div>
+	<label for="Laptop Brands">Laptop Brands</label>
 	<select name="laptop" id="latop">
 		<option name="Apple">Apple</option>
 		<option name="Asus">Asus</option>
 		<option name="HP">HP</option>
 	</select>
+	</div>
 	<div>   
-<label> Age*</label>   
+<label for="Age"> Age*</label>   
 <input type="text" placeholder="Age" name="email" required>   
   
 </div>  
 	<div>  
-<label>DOB*</label>   
+<label for="DOB">DOB*</label>   
 <input type="date"  required>   
  
   </div> 
 	<div>  
-<label>Password*</label>   
+<label for="Password">Password*</label>   
 <input type="password" placeholder="Enter Password" name="psw" required>   
 <br>  
   </div> 
